# c

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt
cv_generator/: README.md  db.sqlite3
cv_generator/portfolio/: __init__.py  admin.py  forms.py  models.py  try.py  urls.py  views.py
cv_generator/portfolio/migrations/: 0001_initial.py  0002_language_name.py  0003_project_url.py  0004_auto_20210426_1657.py  0005_auto_20210426_1752.py  0006_auto_20210428_1652.py  0007_auto_20210428_1804.py  0008_auto_20210505_2258.py  0009_auto_20210513_1257.py
cv_generator/portfolio/templates/: base.html  detail.html  education.html  experience.html  profile_info_edit.html  projects.html  skills.html  style.css  style.js
cv_generator/portfolio/templates/portfolio/: add_section.html  education.html  experience.html  home.html  index.html  login.html  personal_detail.html  projects.html  skills.html
cv_generator/static/assets/css/: animate.css
cv_generator/static/css/: style.css
cv_generator/templates/: base.html
cv_generator/website/: asgi.py  settings.py  urls.py
