[tool.poetry]
name = "cv_generator"
version = "0.1.0"
description = "CV Generator Web App"
authors = ["laxmitimalsina <laxmitimalsina2017@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.1.4"
phonenumbers = "8.12.13"
django-countries = "6.1.3"
django-ckeditor-widget = "0.1"
pillow = "8.0.1"
django-phonenumber-field = "^5.1.0"
django-crispy-forms = "^1.11.2"
django-ckeditor = "^6.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
rope = "^0.19.0"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
